--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=M5Stack WiFi Uploader
-version=1.0.0
+version=1.1.0
 author=M5Stack Community
 maintainer=M5Stack Community <support@m5stack.com>
 sentence=WiFi-based file upload library for M5Stack with SD card support
@@ -8,4 +8,4 @@ category=Communication
 url=https://github.com/m5stack/M5StackWiFiUploader
 architectures=esp32
 depends=
-includes=M5StackWiFiUploader.h,SDCardManager.h,FileValidator.h,Config.h
+includes=M5StackWiFiUploader.h,SDCardManager.h,FileValidator.h,ErrorHandler.h,RetryManager.h,ProgressTracker.h,WebSocketHandler.h,Config.h
