Update documentation and library metadata for v1.4.0 release
- Bump version from 1.3.0 to 1.4.0 in all documentation files
- Update library.properties with new version and maintainer information
  - Change author/maintainer from M5Stack Community to tomorrow56
  - Add M5Unified (>=0.2.11) dependency
  - Update description to mention mobile optimization and ESP32 Core 3.x
- Add mobile optimization feature to README feature lists
- Update dependency requirements
  - Specify M5Unified 0.2.11 or later
  - Note

--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 name=M5Stack WiFi Uploader
-version=1.3.0
-author=M5Stack Community
-maintainer=M5Stack Community <support@m5stack.com>
-sentence=WiFi-based file upload library for M5Stack with SD card support
-paragraph=This library enables M5Stack devices to receive files (photos, binary data, text) via WiFi and save them to the internal SD card. Supports HTTP and WebSocket protocols with progress callbacks and error handling.
+version=1.4.0
+author=tomorrow56
+maintainer=tomorrow56 <tomorrow56@gmail.com>
+sentence=WiFi-based file upload library for M5Stack with SD card support and mobile optimization
+paragraph=This library enables M5Stack devices to receive files (photos, binary data, text) via WiFi and save them to the internal SD card. Supports HTTP and WebSocket protocols with progress callbacks, error handling, and mobile-optimized responsive web UI. Compatible with M5Unified 0.2.11+ and ESP32 Arduino Core 3.x.
 category=Communication
 url=https://github.com/m5stack/M5StackWiFiUploader
 architectures=esp32
-depends=
+depends=M5Unified (>=0.2.11)
 includes=M5StackWiFiUploader.h,SDCardManager.h,FileValidator.h,ErrorHandler.h,RetryManager.h,ProgressTracker.h,WebSocketHandler.h,Config.h
