--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
-name=M5Stack WiFi Uploader
-version=1.1.0
+name=M5StackWiFiUploader
+version=1.1.1
 author=tomorrow56
 maintainer=tomorrow56 <tomorrow56@gmail.com>
 sentence=WiFi-based file upload library for M5Stack with SD card support and mobile optimization
 paragraph=This library enables M5Stack devices to receive files (photos, binary data, text) via WiFi and save them to the internal SD card. Supports HTTP and WebSocket protocols with progress callbacks, error handling, and mobile-optimized responsive web UI. Compatible with M5Unified 0.2.11+ and ESP32 Arduino Core 3.x.
 category=Communication
-url=https://github.com/m5stack/M5StackWiFiUploader
+url=https://github.com/tomorrow56/M5StackWiFiUploader
 architectures=esp32
 depends=M5Unified (>=0.2.11)
 includes=M5StackWiFiUploader.h,SDCardManager.h,FileValidator.h,ErrorHandler.h,RetryManager.h,ProgressTracker.h,WebSocketHandler.h,Config.h
