--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=M5StackWiFiUploader
+name=M5Stack WiFi Uploader
 version=1.1.1
 author=tomorrow56
 maintainer=tomorrow56 <tomorrow56@gmail.com>
