Translate sketch comments to English and update README files
- Convert all Japanese comments to English in FullFeaturedDemo_ESP32.ino and FullFeaturedDemo_ESP32_oled.ino
- Add comprehensive README.md and README_EN.md files for all demo sketches
- Update library.properties to version 1.6.0
- Remove old generic README files from examples/ESP32/
- Improve documentation with detailed setup instructions and PIN configurations

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=M5Stack WiFi Uploader
-version=1.5.0
+version=1.6.0
 author=tomorrow56
 maintainer=tomorrow56 <tomorrow56@gmail.com>
-sentence=WiFi-based file upload library for M5Stack with SD card support and mobile optimization
-paragraph=This library enables M5Stack devices to receive files (photos, binary data, text) via WiFi and save them to the internal SD card. Supports HTTP and WebSocket protocols with progress callbacks, error handling, and mobile-optimized responsive web UI. Compatible with M5Unified 0.2.11+ and ESP32 Arduino Core 3.x.
+sentence=WiFi-based file upload library for M5Stack and ESP32 with SD card support and mobile optimization
+paragraph=This library enables M5Stack and ESP32 devices to receive files (photos, binary data, text) via WiFi and save them to the internal SD card. Supports HTTP and WebSocket protocols with progress callbacks, error handling, and mobile-optimized responsive web UI. Compatible with M5Unified 0.2.11+ and ESP32 Arduino Core 3.x.
 category=Communication
 url=https://github.com/tomorrow56/M5StackWiFiUploader
 architectures=esp32
